--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,8 +1,6 @@
 /*-----------------------------------*/
-/*--- IMPORT STYLES FOR FASTPAGES ---*/
-@import "minima/fastpages-styles";   
-
-
+/*----- ADD YOUR STYLES BELOW -------*/
+@import "minima/dark-mode";
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
