--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,6 +1,7 @@
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-@import "minima/dark-mode";
+@import "minima/fastpages-styles";
+
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
