--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,6 +1,6 @@
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-@import "minima/fastpages-styles";
+@import "minima/dark-mode";
 
 
 /*-----------------------------------*/
